# mcp-wasm

./: LICENSE  README.md
examples/guest-rust/: Cargo.toml  build.rs
examples/guest-rust/src/: lib.rs
examples/host-mcp-runner/: Cargo.toml
examples/host-mcp-runner/src/: main.rs
wit/: errors.wit  resources.wit  world.wit
